# standard-cosmwasm

./: .gitignore  Cargo.toml  README.md  nx.json  package-lock.json  package.json  workspace.json
artifacts/: vault_manager_optimized.wasm  vault_optimized.wasm
contracts/oracle/: Cargo.toml  project.json
contracts/oracle/src/: contract.rs  error.rs  lib.rs  state.rs  tests.rs
contracts/primitives/: Cargo.toml
contracts/primitives/src/: lib.rs
contracts/primitives/src/functions/: mod.rs
contracts/primitives/src/vault_factory/: msg.rs
contracts/protocol/: Cargo.toml  project.json
contracts/protocol/src/msg/: oracle.rs
contracts/token/: Cargo.toml  project.json
contracts/token/src/: contract.rs  ibc.rs  lib.rs  migrations.rs  msg.rs  state.rs  test_helpers.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: error.rs  lib.rs  msg.rs  state.rs
contracts/vault/src/contract/: execute.rs  executor.rs  mod.rs  querier.rs  query.rs
contracts/vault_factory/: Cargo.toml
contracts/vault_factory/examples/: schema.rs
contracts/vault_factory/src/: state.rs
contracts/vault_factory/src/contract/: execute.rs  instantiate.rs  mod.rs  query.rs
contracts/vault_manager/: Cargo.toml
contracts/vault_manager/examples/: schema.rs
contracts/vault_manager/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/vault_manager/src/_contract/: execute.rs  instantiate.rs  mod.rs
contracts/vault_manager/src/contract/: execute.rs  instantiate.rs  mod.rs  query.rs
