[package]
name = "protocol"
version = "0.3.1"
authors = ["Digital Native Foundation"]
edition = "2018"
description = "Shared messages or functions from the protocol"
license = "Apache-2.0"
repository = "https://github.com/digitalnativeinc/standard-cosmwasm"
homepage = "https://standard.tech"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = "0.8.0"
cosmwasm-bignumber = "2.2.0"
cosmwasm-storage = "1.0.0"
cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
schemars = "0.8.1"
cw-storage-plus = { version = "0.13.4" }
cw-controllers = { version = "0.13.4" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "0.16.0"

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true