[package]
name = "token"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw-utils = { version = "0.13.4" }
cw2 = { version = "0.13.4" }
cw20 = { version = "0.13.4" }
cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
cw-storage-plus = { version = "0.13.4" }
cw-controllers = { version = "0.13.4" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }